[package]
name = "distributed-signature-system"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
k256 = { version = "0.13.1", features = ["ecdsa", "std"] }
rand_core = "0.6.4"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.3", features = ["v4"] }