[package]
name = "distributed-signature-system"
version = "0.1.0"
edition = "2021"
default-run = "distributed-signature-system"

[dependencies]
actix-web = "4.5.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
k256 = { version = "0.13.1", features = ["ecdsa", "std"] }
rand_core = "0.6.4"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.3", features = ["v4"] }
rand = "0.8.5"
# bls-signatures = "0.15.0"
bn254 = "0.0.1"
substrate-bn = "0.6.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
bn254_hash2curve ={ git = "https://github.com/hashcloak/bn254-hash-to-curve.git", features = ["gnark_crypto_compatible"]}

[overrides]
subtle = "2.5.0"

[[bin]]
name = "distributed-signature-system"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[example]]
name = "bls"
path = "src/example/bls.rs"

[[example]]
name = "bls_bn"
path = "src/example/bls_bn.rs"
